Fix font size for gasCalc directions to work on mobile

--- a/css/gasCalc.css
+++ b/css/gasCalc.css
@@ -162,7 +162,7 @@ p {
     margin: auto;
     width: 490px;
     color: #444;
-    font-size: 7px;
+    font-size: 15px;
     padding-top: 23px;
     text-align: center;
 }
